sort.pancake.BurnedPancake.scala.error
Erreur de compilation :
BurnedPancake:21: error: Unmatched closing brace '}' ignored here
  }} 
  ^